swap out browserify for bower and require

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script data-main="js/main" src="js/libs/requirejs/require.js"></script>
 </head>
 
-<body>
-    <script src="bundle.js"></script>
-</body>
+<body></body>
 
 </html>
 
