--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script data-main="js/main" src="js/libs/requirejs/require.js"></script>
 </head>
 
-<body></body>
+<body>
+    <canvas id="canvas">
+</body>
 
 </html>
 
